--- a/SubTrack/Views/CalendarPage.xaml
+++ b/SubTrack/Views/CalendarPage.xaml
@@ -7,15 +7,18 @@
 
     <ContentPage.BindingContext>
         <!-- Définir le BindingContext pour la page -->
-        <viewModels:CalendarViewModel />
+        <viewModels:CalendarPageViewModel/>
     </ContentPage.BindingContext>
 
-    <VerticalStackLayout>
+    <VerticalStackLayout Padding="12">
         
         <!-- Utilisation du contrôle CalendarComponent avec des liaisons de données -->
         <controls:CalendarComponent 
             CurrentYear="{Binding CurrentYear, Mode=TwoWay}"
             CurrentMonth="{Binding CurrentMonth, Mode=TwoWay}">
         </controls:CalendarComponent>
+
+        <!-- Représente l'ensemble des dépenses qui tombent mensuellement pour l'utilisateur -->
+        <controls:ExpenseItemComponent/>
     </VerticalStackLayout>
 </ContentPage>
