--- a/SubTrack/Resources/Styles/Styles.xaml
+++ b/SubTrack/Resources/Styles/Styles.xaml
@@ -423,5 +423,58 @@
         <Setter Property="UnselectedTabColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray950}}" />
         <Setter Property="SelectedTabColor" Value="{AppThemeBinding Light={StaticResource Gray950}, Dark={StaticResource Gray200}}" />
     </Style>
+    
+    <!-- Styles personnels -->
 
+    <!-- Style pour le Frame principal -->
+    <Style x:Key="ExpenseItemFrameStyle" TargetType="Frame">
+        <Setter Property="CornerRadius" Value="10" />
+        <Setter Property="BackgroundColor" Value="{StaticResource Gray950}" />
+        <Setter Property="Padding" Value="10" />
+        <Setter Property="Margin" Value="10" />
+        <Setter Property="HasShadow" Value="False" />
+    </Style>
+
+    <!-- Style pour l'icône arrondie -->
+    <Style x:Key="ExpenseIconFrameStyle" TargetType="Frame">
+        <Setter Property="CornerRadius" Value="100" />
+        <Setter Property="BackgroundColor" Value="LightGray" />
+        <Setter Property="Padding" Value="10" />
+        <Setter Property="HeightRequest" Value="50" />
+        <Setter Property="WidthRequest" Value="50" />
+        <Setter Property="VerticalOptions" Value="Center" />
+        <Setter Property="HorizontalOptions" Value="Center" />
+    </Style>
+
+    <!-- Style pour le titre de la dépense -->
+    <Style x:Key="ExpenseTitleLabelStyle" TargetType="Label">
+        <Setter Property="FontSize" Value="16" />
+        <Setter Property="FontAttributes" Value="Bold" />
+        <Setter Property="TextColor" Value="WhiteSmoke" />
+        <Setter Property="Margin" Value="2, 0, 10, 0" />
+    </Style>
+
+    <!-- Style pour la date de la dépense -->
+    <Style x:Key="ExpenseInfosLabelStyle" TargetType="Label">
+        <Setter Property="FontSize" Value="14" />
+        <Setter Property="TextColor" Value="Gray" />
+    </Style>
+
+    <!-- Style pour le montant de la dépense -->
+    <Style x:Key="ExpenseAmountLabelStyle" TargetType="Label">
+        <Setter Property="FontSize" Value="16" />
+        <Setter Property="FontAttributes" Value="Bold" />
+        <Setter Property="TextColor" Value="White" />
+        <Setter Property="VerticalOptions" Value="Center" />
+        <Setter Property="HorizontalOptions" Value="End" />
+        <Setter Property="Margin" Value="0,0,10,0" />
+    </Style>
+    
+    <!-- Style pour le séparateur-->
+    <Style x:Key="SeparatorStyle" TargetType="BoxView">
+        <Setter Property="WidthRequest" Value="100"/>
+        <Setter Property="HeightRequest" Value="2"/>
+        <Setter Property="HorizontalOptions" Value="Fill"/>
+        <Setter Property="Margin" Value="0,15"/>
+    </Style>
 </ResourceDictionary>
