Ajout de la fonctionnalité d'ajout de dépenses mensuelles
- Ajout d'une route pour `AddMonthlyExpensePage` dans `AppShell.xaml.cs`.
- Correction de l'indentation du bouton "Précédent" dans `CalendarComponent.xaml`.
- Mise à jour de `SubTrack.csproj` pour inclure `AddMonthlyExpensePage.xaml`.
- Ajout de la commande `AddExpenseCommand` dans `CalendarPageViewModel.cs` pour gérer l'ajout de dépenses.
- Intégration d'un bouton d'ajout de dépense dans `CalendarPage.xaml`.
- Création de la classe `Expense` dans `Expense.cs` pour représenter une dépense.
- Ajout de `AddMonthlyExpenseViewModel.cs` pour gérer la logique d'ajout de dépenses.
- Création de l'interface utilisateur pour l'ajout de dépenses dans `AddMonthlyExpensePage.xaml`.
- Ajout de la logique de la page d'ajout de dépenses dans `AddMonthlyExpensePage.xaml.cs`.

--- a/SubTrack/Views/CalendarPage.xaml
+++ b/SubTrack/Views/CalendarPage.xaml
@@ -25,8 +25,8 @@
 
         <!-- Représente l'ensemble des dépenses qui tombent mensuellement pour l'utilisateur -->
         <CollectionView Grid.Row="2" 
-                        ItemsSource="{Binding Expenses, Mode=TwoWay}" 
-                        VerticalOptions="FillAndExpand">
+                ItemsSource="{Binding Expenses, Mode=TwoWay}" 
+                VerticalOptions="FillAndExpand">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <controls:ExpenseItemComponent BindingContext="{Binding .}"/>
@@ -34,5 +34,19 @@
             </CollectionView.ItemTemplate>
         </CollectionView>
 
+        <!-- Bouton en bas à droite de la page -->
+        <Button 
+            Grid.Row="0" Grid.RowSpan="3"
+            Text="+"
+            VerticalOptions="End"
+            HorizontalOptions="End"
+            FontSize="Large"
+            Margin="0,0,20,20"
+            BackgroundColor="#2596be"
+            TextColor="White"
+            WidthRequest="60"
+            HeightRequest="60"
+            CornerRadius="10"
+            Command="{Binding AddExpenseCommand}"/>
     </Grid>
 </ContentPage>
