Amélioration de l'interface du calendrier et simplifications
Modification du `StackLayout` dans `CalendarComponent.xaml` pour ajouter un espacement et remplacer le texte des boutons de navigation par des symboles. Ajout de styles pour les boutons et mise à jour de la grille du calendrier.

Simplification des propriétés `CurrentYear` et `CurrentMonth` dans `CalendarComponent.xaml.cs`, avec suppression de méthodes obsolètes et utilisation de `Label` et `Button` pour l'affichage des jours.

Ajustement de la propriété `VerticalOptions` de la `CollectionView` dans `CalendarPage.xaml` pour optimiser l'utilisation de l'espace vertical.

--- a/SubTrack/Views/CalendarPage.xaml
+++ b/SubTrack/Views/CalendarPage.xaml
@@ -26,7 +26,7 @@
         <!-- Représente l'ensemble des dépenses qui tombent mensuellement pour l'utilisateur -->
         <CollectionView Grid.Row="2"
                         ItemsSource="{Binding Expenses, Mode=TwoWay}"
-                        VerticalOptions="FillAndExpand">
+                        VerticalOptions="Fill">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <SwipeView>
