--- a/SubTrack/Views/CalendarPage.xaml
+++ b/SubTrack/Views/CalendarPage.xaml
@@ -1,81 +1,81 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage x:Name="calendarPage"  
-            xmlns="http://schemas.microsoft.com/dotnet/2021/maui"  
-            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"  
-            xmlns:controls="clr-namespace:SubTrack.Controls"  
-            xmlns:viewModels="clr-namespace:SubTrack.ViewModels"  
-            xmlns:converters="clr-namespace:SubTrack.Converters"  
-            x:Class="SubTrack.Views.CalendarPage">  
- 
-   <ContentPage.BindingContext>  
-       <!-- Définir le BindingContext pour la page -->  
-       <viewModels:CalendarPageViewModel/>  
-   </ContentPage.BindingContext>  
-   
-   <ContentPage.Resources>  
-       <ResourceDictionary>  
-           <converters:NumberToMonthConverter x:Key="NumberToMonthConverter" />  
-       </ResourceDictionary>  
-   </ContentPage.Resources>  
- 
-   <Grid Padding="12" RowDefinitions="80, Auto, Auto, *">  
-       <!-- Balance actuelle -->  
-       <StackLayout Grid.Row="0" BackgroundColor="Black" HorizontalOptions="Fill" VerticalOptions="Fill" Padding="10">  
-             <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
-                 <Label Text="Votre balance en " FontSize="Medium" HorizontalOptions="Center"/>  
-                 <Label x:Name="CurrentMonthCalendarPage" Text="{Binding CalendarViewModel.CurrentMonth, Converter={StaticResource NumberToMonthConverter}}" FontSize="Medium" HorizontalOptions="Center"/>  
-             </StackLayout>
-             <Label Text="{Binding CurrentBalance, StringFormat='{0:C}'}" FontSize="Large" FontAttributes="Bold" HorizontalOptions="Center"/>  
-         </StackLayout>  
- 
-       <!-- Utilisation du contrôle CalendarComponent avec des liaisons de données -->  
-       <controls:CalendarComponent  
-           Grid.Row="1"  
-           CurrentYear="{Binding CurrentYear, Mode=TwoWay}"  
-           CurrentMonth="{Binding CurrentMonth, Mode=TwoWay}"  
-           BindingContext="{Binding CalendarViewModel}">  
-       </controls:CalendarComponent>  
- 
-       <!-- Séparateur -->  
-       <BoxView Grid.Row="2" Style="{StaticResource SeparatorStyle}"/>  
- 
-       <!-- Représente l'ensemble des dépenses qui tombent mensuellement pour l'utilisateur -->  
-       <CollectionView Grid.Row="3"  
-                       ItemsSource="{Binding Expenses, Mode=TwoWay}"  
-                       VerticalOptions="Fill">  
-           <CollectionView.ItemTemplate>  
-               <DataTemplate>  
-                   <SwipeView>  
-                       <SwipeView.RightItems>  
-                           <SwipeItems Mode="Reveal">  
-                               <SwipeItem Text="Supprimer"  
-                                  BackgroundColor="Red"  
-                                  IconImageSource="trash.png"  
-                                  Command="{Binding Source={x:Reference calendarPage}, Path=BindingContext.DeleteExpenseCommand}"  
-                                  CommandParameter="{Binding ExpenseId}" />  
-                           </SwipeItems>  
-                       </SwipeView.RightItems>  
-                       <controls:ExpenseItemComponent BindingContext="{Binding .}"/>  
-                   </SwipeView>  
-               </DataTemplate>  
-           </CollectionView.ItemTemplate>  
-       </CollectionView>  
- 
-       <!-- Bouton en bas à droite de la page -->  
-       <Button  
-           Grid.Row="1" Grid.RowSpan="3"  
-           Text="+"   
-           VerticalOptions="End"  
-           HorizontalOptions="End"  
-           FontSize="Large"  
-           Margin="0,0,20,20"  
-           BackgroundColor="#2596be"  
-           TextColor="White"  
-           WidthRequest="60"  
-           HeightRequest="60"  
-           CornerRadius="10"  
-           Command="{Binding AddExpenseCommand}"/>  
-   </Grid>  
+           xmlns="http://schemas.microsoft.com/dotnet/2021/maui"  
+           xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"  
+           xmlns:controls="clr-namespace:SubTrack.Controls"  
+           xmlns:viewModels="clr-namespace:SubTrack.ViewModels"  
+           xmlns:converters="clr-namespace:SubTrack.Converters"  
+           x:Class="SubTrack.Views.CalendarPage">  
+
+  <ContentPage.BindingContext>  
+      <!-- Définir le BindingContext pour la page -->  
+      <viewModels:CalendarPageViewModel/>  
+  </ContentPage.BindingContext>  
+  
+  <ContentPage.Resources>  
+      <ResourceDictionary>  
+          <converters:NumberToMonthConverter x:Key="NumberToMonthConverter" />  
+      </ResourceDictionary>  
+  </ContentPage.Resources>  
+
+  <Grid Padding="12" RowDefinitions="80, Auto, Auto, *">  
+      <!-- Balance actuelle -->  
+      <StackLayout Grid.Row="0" BackgroundColor="Black" HorizontalOptions="Fill" VerticalOptions="Fill" Padding="10">  
+            <StackLayout Orientation="Horizontal" HorizontalOptions="Center">  
+                <Label Text="Votre balance en " FontSize="Medium" HorizontalOptions="Center"/>  
+                <Label x:Name="CurrentMonthCalendarPage" Text="{Binding CalendarViewModel.CurrentMonth, Converter={StaticResource NumberToMonthConverter}}" FontSize="Medium" HorizontalOptions="Center"/>  
+            </StackLayout>  
+            <Label Text="{Binding CurrentBalance, StringFormat='{0:C}'}" FontSize="Large" FontAttributes="Bold" HorizontalOptions="Center"/>  
+        </StackLayout>  
+
+      <!-- Utilisation du contrôle CalendarComponent avec des liaisons de données -->  
+      <controls:CalendarComponent  
+          Grid.Row="1"  
+          CurrentYear="{Binding CurrentYear, Mode=TwoWay}"  
+          CurrentMonth="{Binding CurrentMonth, Mode=TwoWay}"  
+          BindingContext="{Binding CalendarViewModel}">  
+      </controls:CalendarComponent>  
+
+      <!-- Séparateur -->  
+      <BoxView Grid.Row="2" Style="{StaticResource SeparatorStyle}"/>  
+
+      <!-- Représente l'ensemble des opérations qui tombent mensuellement pour l'utilisateur -->  
+      <CollectionView Grid.Row="3"  
+                      ItemsSource="{Binding Operations, Mode=TwoWay}"  
+                      VerticalOptions="Fill">  
+          <CollectionView.ItemTemplate>  
+              <DataTemplate>  
+                  <SwipeView>  
+                      <SwipeView.RightItems>  
+                          <SwipeItems Mode="Reveal">  
+                              <SwipeItem Text="Supprimer"  
+                                 BackgroundColor="Red"  
+                                 IconImageSource="trash.png"  
+                                 Command="{Binding Source={x:Reference calendarPage}, Path=BindingContext.DeleteOperationCommand}"  
+                                 CommandParameter="{Binding OperationId}" />  
+                          </SwipeItems>  
+                      </SwipeView.RightItems>  
+                      <controls:OperationItemComponent BindingContext="{Binding .}"/>  
+                  </SwipeView>  
+              </DataTemplate>  
+          </CollectionView.ItemTemplate>  
+      </CollectionView>  
+
+      <!-- Bouton en bas à droite de la page -->  
+      <Button  
+          Grid.Row="1" Grid.RowSpan="3"  
+          Text="+"   
+          VerticalOptions="End"  
+          HorizontalOptions="End"  
+          FontSize="Large"  
+          Margin="0,0,20,20"  
+          BackgroundColor="#2596be"  
+          TextColor="White"  
+          WidthRequest="60"  
+          HeightRequest="60"  
+          CornerRadius="10"  
+          Command="{Binding AddOperationCommand}"/>  
+  </Grid>  
 </ContentPage>
 
 
