Remplacer ExpenseToTextConverter par OperationToTextConverter
Mise à jour de `OperationItemComponent.xaml` pour utiliser
`OperationToTextConverter` à la place de `ExpenseToTextConverter`.
Suppression du fichier `ExpenseToTextConverter.cs` et ajout
d'un nouveau fichier `OperationToTextConverter.cs` qui
implémente la logique de conversion pour les opérations.

--- a/SubTrack/Controls/OperationItemComponent.xaml
+++ b/SubTrack/Controls/OperationItemComponent.xaml
@@ -5,7 +5,7 @@
 
     <ContentView.Resources>
         <ResourceDictionary>
-            <converters:ExpenseToTextConverter x:Key="ExpenseToTextConverter" />
+            <converters:OperationToTextConverter x:Key="OperationToTextConverter" />
         </ResourceDictionary>
     </ContentView.Resources>
 
@@ -40,7 +40,7 @@
                                Style="{StaticResource OperationInfosLabelStyle}"
                                FontAttributes="Bold" />
                     </HorizontalStackLayout>
-                    <Label Text="{Binding IsRecurrent, Converter={StaticResource ExpenseToTextConverter}}"
+                    <Label Text="{Binding IsRecurrent, Converter={StaticResource OperationToTextConverter}}"
                            Style="{StaticResource OperationInfosLabelStyle}" />
                 </VerticalStackLayout>
 
