Opérations financières fonctionnelles
Suppression de la table `MonthlyIncomes` et réorganisation des opérations financières dans `Database.cs`. Ajout de propriétés pour gérer les types d'opérations dans `AddFinancialOperationViewModel.cs`, avec une méthode pour mettre à jour les catégories. Correction du calcul du solde courant dans `CalendarPageViewModel.cs`. Mise à jour des liaisons de données dans `AddFinancialOperationPage.xaml`. Création d'un nouvel énumérateur `OperationType` dans `OperationType.cs` pour mieux gérer les types d'opérations.

--- a/SubTrack/Views/AddFinancialOperationPage.xaml
+++ b/SubTrack/Views/AddFinancialOperationPage.xaml
@@ -6,11 +6,12 @@
              Title="Ajouter une opération">
 
     <!-- Liaison ViewModel en code-behind -->
-    
+
     <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,*" Padding="12">
         <VerticalStackLayout Grid.Row="0"  Spacing="10">
             <StackLayout>
                 <Label Text="Type d'opération" />
+                <Picker ItemsSource="{Binding OperationTypes}" SelectedItem="{Binding SelectedOperationType}" Title="Sélectionner un type" />
             </StackLayout>
 
             <!-- Titre de l'opération -->
@@ -34,7 +35,7 @@
             <!-- Catégorie de l'opération -->
             <StackLayout>
                 <Label Text="Catégorie" />
-                <Picker ItemsSource="{Binding Categories}" SelectedItem="{Binding OperationCategory}" Title="Sélectionner une catégorie" />
+                <Picker ItemsSource="{Binding Categories}" SelectedItem="{Binding SelectedOperationCategory}" Title="Sélectionner une catégorie" />
             </StackLayout>
 
             <!-- Est récurrent ou non -->
