Améliorations du calendrier et mise à jour des styles
Ajout de nouveaux champs statiques pour les noms des jours de la semaine dans `CalendarComponent.xaml.cs` et ajustements des propriétés bindables. Introduction de la méthode `OnMonthChanged` pour gérer les changements de mois et création d'un pool de boutons pour réutilisation.

Mise à jour des styles dans `OperationItemComponent.xaml`, augmentation de la taille des images et ajustements des étiquettes.

Modification des noms des mois en minuscules dans `NumberToMonthConverter.cs` et remplacement des polices OpenSans par Montserrat dans `MauiProgram.cs` et `Styles.xaml`.

Ajout d'une méthode `OnCreate` dans `MainActivity.cs` pour définir la couleur de la barre d'état sur Android.

Mise à jour des couleurs dans `colors.xml` et `Colors.xaml`, avec suppression des fichiers de police OpenSans.

Ajustements du BindingContext et de la structure de la page dans `CalendarPage.xaml` pour améliorer l'utilisation du contrôle `CalendarComponent`.

--- a/SubTrack/Controls/OperationItemComponent.xaml
+++ b/SubTrack/Controls/OperationItemComponent.xaml
@@ -22,26 +22,25 @@
                        Style="{StaticResource OperationIconFrameStyle}">
                     <Image Source="wallet.png"
                            Aspect="AspectFill"
-                           HeightRequest="30"
-                           WidthRequest="30"
+                           HeightRequest="35"
+                           WidthRequest="35"
                            VerticalOptions="Center"
                            HorizontalOptions="Center"/>
                 </Frame>
 
                 <VerticalStackLayout Grid.Column="1"
-                                     VerticalOptions="Center"
-                                     Spacing="1">
+                                     VerticalOptions="Center" >
                     <Label Text="{Binding OperationTitle}"
                            Style="{StaticResource OperationTitleLabelStyle}" />
                     <HorizontalStackLayout>
                         <Label Text="Le "
-                               Style="{StaticResource OperationInfosLabelStyle}" />
+                               Style="{StaticResource OperationDateLabelStyle}" />
                         <Label Text="{Binding OperationDate, StringFormat='{0:dd/MM/yyyy}'}"
-                               Style="{StaticResource OperationInfosLabelStyle}"
+                               Style="{StaticResource OperationDateLabelStyle}"
                                FontAttributes="Bold" />
                     </HorizontalStackLayout>
                     <Label Text="{Binding IsRecurrent, Converter={StaticResource OperationToTextConverter}}"
-                           Style="{StaticResource OperationInfosLabelStyle}" />
+                           Style="{StaticResource OperationRedundencyLabelStyle}" />
                 </VerticalStackLayout>
 
                 <Label Grid.Column="2"
